# SeDriCa-BatMobile

./: CHANGELOG.md  README.md
IntegratedPipeline/: README.md
IntegratedPipeline/MPnC/: CMakeLists.txt  package.xml
IntegratedPipeline/MPnC/src/: coordinatesreceiver.cpp
IntegratedPipeline/Perception/: locate_func.py  publisher_node.py  reciever_node.py
IntegratedPipeline/batmobile_integrated/: CMakeLists.txt  package.xml
IntegratedPipeline/batmobile_integrated/launch/: batmobile.launch.py
IntegratedPipeline/batmobile_integrated/src/: coordinatesreceiver.cpp  locate_func.py  publisher_node.py  targetpub.cpp
IntegratedPipeline/integratedPackage/: CMakeLists.txt  package.xml
IntegratedPipeline/integratedPackage/msg/: ControlInstructions.msg
IntegratedPipeline/integratedPackage/src/: coordinatesreceiver.cpp  reciever_node.py
Motion_Planning/: README.md
Motion_Planning/gazebo_car_simulation/: CMakeLists.txt  package.xml
Motion_Planning/gazebo_car_simulation/launch/: sim.launch.py
Motion_Planning/gazebo_car_simulation/src/: pid_steer_publisherv3.cpp
Motion_Planning/occupancy_matrix/: CMakeLists.txt  package.xml
Motion_Planning/occupancy_matrix/src/: a.out  motion.cpp  multi_curve_path.csv  occupancyPub.cpp  path.cpp  path_coordinates.csv  pathnode.cpp  pid.cpp  plot.py  plotPathPID.py  points.csv  readCSV.cpp  subscriber.cpp
Motion_Planning/rviz_path_simulation/: CMakeLists.txt  package.xml
Motion_Planning/rviz_path_simulation/launch/: path_publisher.launch.py
Motion_Planning/rviz_path_simulation/share/csv/: curve_coordinates.csv  trajectory.csv
Motion_Planning/rviz_path_simulation/share/rviz/: path_display.rviz
Motion_Planning/rviz_path_simulation/src/: path_publisher.cpp
Perception/: TODO.md  package.xml  setup.cfg  setup.py
Perception/starship_detector/: config.yaml  dataset.py  locate.py  main.py
Perception/talker_node/: CMakeLists.txt  __init__.py
docs/images/: gazebo.webm
